libcork (0.15.0+ds-5) UNRELEASED; urgency=medium

  * debian/patches:
    - Update 0005 patch, to fix build error on ubuntu yakkety.
      Thanks previous patch from Gianfranco Costamagna.

 -- Roger Shimizu <rogershimizu@gmail.com>  Fri, 08 Jul 2016 23:55:47 +0200

libcork (0.15.0+ds-4) unstable; urgency=medium

  * debian/patches:
    - Update 0001 patch, to use full debian version from changelog
    - Remove 0002 patch, re-order rest of patches
    - Update 0005 patch, to fix multi-arch support
    - Add a patch to fix a bit on library pkg-config file
    - Add a patch to fix hash test result for big-endian 64bit
  * debian/rules:
    - Set hardening from "+all" to "-pie,+all" to avoid building issue
      on armel
    - Cleanup
  * debian/compat:
    - Upgrade from 9 to 10
  * debian/control:
    - Update multi-arch support. Sorry for the missing in previous release
    - Raise build-dependency debhelper >= 9.20160403 to support compat 10
    - Remove build-dependency on dh-exec
    - Move libcork-doc to extra, due to it depends on extra library
  * debian/*.install:
    - Remove dh-exec hack on multi-arch

 -- Roger Shimizu <rogershimizu@gmail.com>  Thu, 07 Jul 2016 11:47:13 +0200

libcork (0.15.0+ds-3) unstable; urgency=medium

  * debian/patches:
    - Add build support for kFreeBSD and GNU/Hurd. Thanks to Aaron M. Ucko.
      (Closes: #826263)

 -- Roger Shimizu <rogershimizu@gmail.com>  Sun, 19 Jun 2016 00:39:27 +0900

libcork (0.15.0+ds-2) unstable; urgency=medium

  * debian/control:
    - Add "Suggests" to libcork-dev. Thanks to Gianfranco Costamagna,
      and Ben Finney. (Closes: #826835)
    - Add dh-exec as build dependency to support multi-arch install
  * debian/*.install:
    Use dh-exec to support multi-arch install
  * debian/patches:
    - Add a patch from upstream's develop branch to fix build on 32-bit system
    - Add a patch to support multi-arch library

 -- Roger Shimizu <rogershimizu@gmail.com>  Thu, 16 Jun 2016 22:18:43 +0900
