@@ -1,1 +1,1 @@
-build/docs/old/html
+obj-*/docs/old/html
