@@ -3,6 +3,8 @@ libcork (0.15.0+ds-5) UNRELEASED; urgency=medium
   * debian/patches:
     - Update 0005 patch, to fix build error on ubuntu yakkety.
       Thanks previous patch from Gianfranco Costamagna.
+  * debian/rules:
+    - Remove "--builddirectory=build"
 
  -- Roger Shimizu <rogershimizu@gmail.com>  Fri, 08 Jul 2016 23:55:47 +0200
 
